# DeepRetail-Intelligent-Inventory-Markdown-Optimization-Engine

./: .replit  Dockerfile  app.py  pyproject.toml  replit.md  requirements.txt
api/: __init__.py  main.py
mlruns/0/: meta.yaml
mlruns/981662993942839277/: meta.yaml
mlruns/981662993942839277/6548b2628dd1490d88335766de3e8052/: meta.yaml
mlruns/981662993942839277/6548b2628dd1490d88335766de3e8052/metrics/: mae  mape  r2  rmse
mlruns/981662993942839277/6548b2628dd1490d88335766de3e8052/outputs/m-c72b0ec47f894b279b4b43502ae64639/: meta.yaml
mlruns/981662993942839277/6548b2628dd1490d88335766de3e8052/tags/: mlflow.runName
mlruns/981662993942839277/b43e3e43d5954c59b9279c3c04812e81/: meta.yaml
mlruns/981662993942839277/b43e3e43d5954c59b9279c3c04812e81/metrics/: mae  mape  r2  rmse
mlruns/981662993942839277/b43e3e43d5954c59b9279c3c04812e81/outputs/m-84085e4824d64e88aa49ed70ad8c7c7d/: meta.yaml
mlruns/981662993942839277/b43e3e43d5954c59b9279c3c04812e81/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/981662993942839277/ddc71fb62cee4243aa4010e5c000496d/: meta.yaml
mlruns/981662993942839277/ddc71fb62cee4243aa4010e5c000496d/metrics/: mae  mape  r2  rmse
mlruns/981662993942839277/ddc71fb62cee4243aa4010e5c000496d/tags/: mlflow.runName
mlruns/981662993942839277/models/m-84085e4824d64e88aa49ed70ad8c7c7d/: meta.yaml
mlruns/981662993942839277/models/m-a3fa1c0e40c8444c90f6577d7887a367/: meta.yaml
mlruns/981662993942839277/models/m-c72b0ec47f894b279b4b43502ae64639/: meta.yaml
utils/: __init__.py  data_processor.py  forecasting.py
(+20 files in other folders)
