[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=38.2.0",
    "fastapi>=0.122.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
